# Scribble

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.stt  INSTALL_GUIDE.md  README.md  build-windows.bat  build.sh  db.js  docker-compose.yml  electron-builder.yml  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  server.js  setup_stt_macos.sh  stt_service.py  test_nvidia.py  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build.yml  release-manifest.yml  update-landing.yml
docs/: auto-update.md
docs/reports/: scout-2026-03-30-soniox-stt-full-codebase.md
docs/upload-feature/: 00-overview.md  01-cross-platform-rules.md  02-regression-checklist.md  03-phase-1-backend-skeleton.md  04-phase-2-pipeline.md
landing/: i18n.js  index.html  package-lock.json  package.json  style.css
landing/app/: globals.css  layout.js  page.js
proto/: riva_asr.proto
public/: app.js  i18n.js  index.html  style.css
src/: App.tsx  i18n.ts  index.css
src-python/: build.sh  db.py  diarize.py  diarize.py.bak  i18n.py  logger.py  main.py  pyi_rth_torchaudio.py  requirements-docker.txt  requirements.txt  scribble-sidecar.spec  stt.py  summarize.py  test_diarize.py  translate.py  version_info.txt
src-python/api/: attachments.py  diagnose.py  drafts.py  meetings.py  settings.py  transcription.py  upload.py
src-python/services/: audio.py  batch_diarizer.py  job_registry.py  minutes.py  upload_pipeline.py  upload_storage.py  vad_splitter.py
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  upload.rs
src-tauri/tests/: upload_streaming.rs
src/components/: ConfirmDialog.tsx  CustomSelect.tsx  LogPanel.tsx  MeetingAttachments.tsx  MeetingDetail.tsx  MeetingList.tsx  RecordingBar.tsx  RecordingPanel.tsx  SettingsDialog.tsx  SettingsPanel.tsx  StartupStatusBar.tsx  SummaryView.tsx  Toast.tsx  TranscriptView.tsx  UpdateBanner.tsx  UpdateChecker.tsx  UpdateModal.tsx  UploadAudioModal.tsx
src/components/recording/: index.ts  recording-constants.ts  use-chunk-recording.ts  use-draft-archive.ts  use-streaming-stt.ts  use-summarize.ts  use-waveform.ts
src/lib/: api.ts  attachments.ts  i18n.ts  language-options.ts  markdown.tsx  sidecar.ts  sse.ts  transcriptUtils.ts  updater.ts  upload-audio.ts
src/stores/: appStore.ts  updaterStore.ts
src/types/: global.d.ts  stt.ts
