[package]
name = "voicescribe"
version = "0.1.0"
description = "Scribble - Meeting Minutes"
authors = ["you"]
edition = "2021"

[lib]
name = "voicescribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
log = "0.4"
hound = "3.5"
tokio = { version = "1", features = ["rt", "time", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dirs = "5"
ringbuf = "0.4"

# macOS: CoreAudio process tap via cidre (same as Meetily)
[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }

# Windows: WASAPI loopback for system audio capture
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

# Linux: WebKitGTK for auto-granting microphone permission
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.1"
